feat: add 020 write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -4,17 +4,17 @@
 
 You are supposed to write for the Postgraduates' Association a notice to recruit volunteers for an international
 conference on globalization. The notice should include the basic qualifications for applicants and other information
-which you think is relevant.
-You should write about 100 words On ANSWER SHEET 2.
-Do not sign your own name at the end of the notice. Use “Postgraduates' Association” instead.
+which you think is relevant.<br>
+You should write about 100 words On ANSWER SHEET 2.<br>
+Do not sign your own name at the end of the notice. Use “Postgraduates' Association” instead.<br>
 
 ### Example
 
 <p align="center">Notice</p>
 <p align="right">January 9, 2010</p>
-&emsp;&emsp;&emsp;&emsp;Volunteers are needed for the International Conference on Globalization to be held on this campus in early July.<br>
-&emsp;&emsp;&emsp;&emsp;Basic requirements are familiarity with the theme of the conference and proficiency in English. Other requirements include good interpersonal communication abilities, familiarity with our city's tourist attractions and its history, proper manners, and a strong sense of responsibility. Preference will be given to those experienced in international conferences or other similar activities.<br>
-&emsp;&emsp;&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries are encouraged; No visited please.<br>
+&emsp;&emsp;Volunteers are needed for the International Conference on Globalization to be held on this campus in early July.<br>
+&emsp;&emsp;Basic requirements are familiarity with the theme of the conference and proficiency in English. Other requirements include good interpersonal communication abilities, familiarity with our city's tourist attractions and its history, proper manners, and a strong sense of responsibility. Preference will be given to those experienced in international conferences or other similar activities.<br>
+&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries are encouraged; No visited please.<br>
 <p align="right">Postgraduates' Association</p>
 
 ### 译文
@@ -43,13 +43,13 @@ Do not sign your own name at the end of the letter. Use “Zhang Wei” instead.
 ### Example
 
 Dear Bob,<br>
-&emsp;&emsp;&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write
+&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write
 a letter to you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left
 a deep impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
-&emsp;&emsp;&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, You
+&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, You
 will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand
 of the places you would like to visit.<br>
-&emsp;&emsp;&emsp;&emsp;Please give my best regards to your family.<br>
+&emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
 <p align="right">Zhang Wei</p>
 
@@ -66,14 +66,14 @@ of the places you would like to visit.<br>
 ## 003
 
 Dear friends,<br>
-&emsp;&emsp;&emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend
+&emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend
 our heartfelt welcome to all the overseas students who will study in our university.<br>
-&emsp;&emsp;&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life in
+&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life in
 this prestigious university is perhaps not as easy as you have expected. You may be tightly bound by daily classes,
 abundant homework and frequent exams. Thus, be prepared for the hectic life here. In the second place, in spite of all
 those burdens, various extracurricular activities such as sports meets, speech contests and social gatherings will still
 provide ample opportunities to make friends. So, enjoy your life in this esteemed institute!<br>
-&emsp;&emsp;&emsp;&emsp;All in all, although there is a lot of pressure, the time you spend on our campus will be
+&emsp;&emsp;All in all, although there is a lot of pressure, the time you spend on our campus will be
 worthwhile and enhance your whole life. Hope you like it here.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -81,13 +81,13 @@ worthwhile and enhance your whole life. Hope you like it here.<br>
 ## 004
 
 Dear Sir or Madam,<br>
-&emsp;&emsp;&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for
+&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for
 a short period of time, I found it has some problems.<br>
-&emsp;&emsp;&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need
+&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need
 to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary **are** so
 small that it is nearly impossible to type anything with them. Personally, I find **this to be completely unacceptable
 **.<br>
-&emsp;&emsp;&emsp;&emsp;Therefore, I would like **either to change for** another model that works better or a full
+&emsp;&emsp;Therefore, I would like **either to change for** another model that works better or a full
 refund. Your help is greatly appreciated.<br>
 <p align="right">**Yours** sincerely</p>
 <p align="right">Zhang Wei</p>
@@ -95,28 +95,28 @@ refund. Your help is greatly appreciated.<br>
 ## 005
 
 Dear Professor Smith<br>
-&emsp;&emsp;&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our
+&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our
 new judge.<br>
-&emsp;&emsp;&emsp;&emsp;As **the core** of our "Foreign Culture Festival", this school-wide contest **is to be held** in
+&emsp;&emsp;As **the core** of our "Foreign Culture Festival", this school-wide contest **is to be held** in
 the Students' **Auditorium** on May 12 (next Sunday). And we believe that you can give our **competitors** some
 enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event **will
 start** at around 7:00 p.m. and **last for** 2 hours at most. At the end of it, we will have some hand-made **presents**
 for each judge and competitor.<br>
-&emsp;&emsp;&emsp;&emsp;Once again, we sincerely hope you can be the judge **for** our competition.
+&emsp;&emsp;Once again, we sincerely hope you can be the judge **for** our competition.
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
 ## 006
 
 Dear Professor Cook,<br>
-&emsp;&emsp;&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to
+&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to
 recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
-&emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the
+&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the
 Forbidden City, was the imperial palace of the Ming and Qing Dynasties. **It is also the largest piece of ancient
 Chinese architecture currently existing.** Meanwhile, the Great Wall, symbolizing China's ancient civilization, **is one
 of the world's most renowned projects**. **As the great creation of the ancient Chinese people and one of the wonders of
 the world**, it was listed as one of the world cultural heritage sites in 1987.<br>
-&emsp;&emsp;&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your
+&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your
 stay in our city.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -124,13 +124,13 @@ stay in our city.<br>
 ## 007
 
 Dear Professor Smith,<br>
-&emsp;&emsp;&emsp;&emsp;I am looking forward to my travel to the United States and **visiting** you in Harvard
+&emsp;&emsp;I am looking forward to my travel to the United States and **visiting** you in Harvard
 University.<br>
-&emsp;&emsp;&emsp;&emsp;**Unfortunately**, I have recently been diagnosed with a serious ear infection which will
+&emsp;&emsp;**Unfortunately**, I have recently been diagnosed with a serious ear infection which will
 require **surgery** on the same day as my departure. I am sorry to say that I will therefore not be able to make the
 travel plan. If possible, I would like to postpone the travel plan to another day later this year. I promise that such a
 situation **does** not usually happen, and **apologize** for any **inconvenience** this may cause you.<br>
-&emsp;&emsp;&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention
+&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention
 to my suggestion would be highly appreciated.<br>
 
 <p align="right">Yours sincerely,</p>
@@ -139,15 +139,15 @@ to my suggestion would be highly appreciated.<br>
 ## 008
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to **present** an *
+&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to **present** an *
 *oral** report on an ancient Chinese **scientist**, Bi Sheng is an ideal candidate.<br>
-&emsp;&emsp;&emsp;&emsp;In the middle of the 11 century during the Song **Dynasty**, Bi Sheng invented the movable type
+&emsp;&emsp;In the middle of the 11 century during the Song **Dynasty**, Bi Sheng invented the movable type
 printing technique. He mainly **used** clay type, which **saved** much time and money compared with block printing.
 After that, the movable type printing technique was widely promoted. China's printing technique was **spread** to the *
 *Arabic region** during the Yuan Dynasty and then to **Africa and Europe**. Printing provided **a** significant
 condition for the European **science** to develop **rapidly** after the long night of the medieval period and **the
 emergence of the Renaissance**.<br>
-&emsp;&emsp;&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful
+&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful
 presentation.<br>
 
 <p align="right">Yours,</p>
@@ -156,12 +156,12 @@ presentation.<br>
 ## 009
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. Thank you for your **enthusiastic** response to the event!<br>
-&emsp;&emsp;&emsp;&emsp;As you know, I will invite a great many **craftsmen** to our **campus**. They will show a *
+&emsp;&emsp;I'm glad to hear from you. Thank you for your **enthusiastic** response to the event!<br>
+&emsp;&emsp;As you know, I will invite a great many **craftsmen** to our **campus**. They will show a *
 *variety** of **innovative** Chinese craft-making, especially silk-making. Silk-making is a **handicraft inherited**
 from ancient China, as well as a traditional art form. Silk is a symbol of **ancient Chinese culture**, and the long
 history of China's silk industry is **a brilliant page** in the **encyclopedia** of Chinese culture.<br>
-&emsp;&emsp;&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on
+&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on
 May 1, 2025. Could you please help me **to** write the letters of invitation **to** all the craftsmen? Looking forward
 to your support.<br>
 
@@ -171,12 +171,12 @@ to your support.<br>
 ## 010
 
 Dear John,<br>
-&emsp;&emsp;&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-*Romance of the Three Kingdoms*.
+&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-*Romance of the Three Kingdoms*.
 Now I am planning to direct a short play revised from it<br>
-&emsp;&emsp;&emsp;&emsp;*Romance of the Three Kingdoms*, as one of the Four Great Classical Novels in China, mainly
+&emsp;&emsp;*Romance of the Three Kingdoms*, as one of the Four Great Classical Novels in China, mainly
 depicts the political and military struggles during the Three Kingdoms Period and reveals the turbulent society. It
 successfully portrays images of classic characters, such as Zhuge Liang, Liu Bei, Guan Yu, Cao Cao, and so on.<br>
-&emsp;&emsp;&emsp;&emsp;Since you excel in acting, I cordially invite you to participate in the play and act as the
+&emsp;&emsp;Since you excel in acting, I cordially invite you to participate in the play and act as the
 leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking forward to your reply.<br>
 
 <p align="right">Yours,</p>
@@ -199,12 +199,12 @@ Write your answer in about 100 words on the ANSWER SHEETDo not use your own name
 ### Example
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;I'm extremely happy to learn you are coming to China! Here are my recommendations.<br>
-&emsp;&emsp;&emsp;&emsp;Since it's the first time you visit China. I highly recommend Beijing, the capital of China.
+&emsp;&emsp;I'm extremely happy to learn you are coming to China! Here are my recommendations.<br>
+&emsp;&emsp;Since it's the first time you visit China. I highly recommend Beijing, the capital of China.
 Beijing is a city in the northern part of China. As a center of politics, culture, international communication, and
 scientific and technological innovation, Beijing attracts talent from all over the country, displaying China's
 development to the world.<br>
-&emsp;&emsp;&emsp;&emsp;As for tourist attractions, I suggest you visit the Imperial Palace, the Great Wall and the
+&emsp;&emsp;As for tourist attractions, I suggest you visit the Imperial Palace, the Great Wall and the
 Summer Palace, all of which have been listed on the UN's World Heritage List. It is true that Beijing, once an ancient
 imperial city, is now a genuine metropolis. Looking forward to meeting you in Beijing.<br>
 
@@ -223,14 +223,14 @@ imperial city, is now a genuine metropolis. Looking forward to meeting you in Be
 ## 012
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;Thank you for your congratulations! In September, I'm going to pursue my master's degree in
+&emsp;&emsp;Thank you for your congratulations! In September, I'm going to pursue my master's degree in
 Peking University, one of the top two universities in China.<br>
-&emsp;&emsp;&emsp;&emsp;Established in 1898, Peking University was originally founded as the Imperial University of
+&emsp;&emsp;Established in 1898, Peking University was originally founded as the Imperial University of
 Peking-the first national comprehensive university in modern China. For over a century, she had contributed to the
 development of China and the change of the destiny of its people. As China's leading higher education institution for
 teaching and researching, Peking University enjoys an excellent academic reputation, attracting top scholars and
 students from China and all over the world.<br>
-&emsp;&emsp;&emsp;&emsp;As for your application to a Chinese university, I suggest Peking University and Tsinghua
+&emsp;&emsp;As for your application to a Chinese university, I suggest Peking University and Tsinghua
 University as your best choices. Your resume and application letter play a vital role in application. Looking forward to
 your reply.<br>
 
@@ -240,15 +240,15 @@ your reply.<br>
 ## 013
 
 Dear friends,<br>
-&emsp;&emsp;&emsp;&emsp;I am writing the email to recommend one of the most prestigious Chinese celebrities to you,
+&emsp;&emsp;I am writing the email to recommend one of the most prestigious Chinese celebrities to you,
 Confucius.<br>
-&emsp;&emsp;&emsp;&emsp;First of all, being a great thinker, educator and founder of Confucianism, Confucius is an
+&emsp;&emsp;First of all, being a great thinker, educator and founder of Confucianism, Confucius is an
 ancient sage during the Spring and Autumn Period. In addition, his words and life story were recorded by his disciples
 and their student in *The Analects*. As an enduring classic of ancient Chinese culture, *The Analects* has influenced
 all thinkers, writers and politicians in the over-2000-year-long history of China after Confucius. Finally, much of
 Confucian thought still remains the interest of not only the Chinese people but also people in other parts of the
 world.<br>
-&emsp;&emsp;&emsp;&emsp;If you have any questions about Confucius, please feel free to contact me.<br>
+&emsp;&emsp;If you have any questions about Confucius, please feel free to contact me.<br>
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -256,12 +256,12 @@ world.<br>
 ## 014
 
 Dear friends,<br>
-&emsp;&emsp;&emsp;&emsp;On behalf of Class 3, I warmly welcome you to attend the Dragon Boat Festival celebration.<br>
-&emsp;&emsp;&emsp;&emsp;The Dragon Boat Festival, falling on the 5th of the fifth lunar month, is a traditional Chinese
+&emsp;&emsp;On behalf of Class 3, I warmly welcome you to attend the Dragon Boat Festival celebration.<br>
+&emsp;&emsp;The Dragon Boat Festival, falling on the 5th of the fifth lunar month, is a traditional Chinese
 holiday for family members to gather together. Aside from enjoying the dragon boat racing, Chinese people also eat the
 traditional food of the festival-zongzi. Considering that some students cannot be reunited with their families this
 year, our class decides to hold this celebration to make everyone feel the love and friendship on this special day.<br>
-&emsp;&emsp;&emsp;&emsp;If you are interested in participating in this celebration, please fill in your personal
+&emsp;&emsp;If you are interested in participating in this celebration, please fill in your personal
 information on the school's website at www.bfsu.edu.cn. The activity will be held in the Auditorium from 10:00 a.m. to
 4:00 p.m. on June 12th.<br>
 
@@ -271,12 +271,12 @@ information on the school's website at www.bfsu.edu.cn. The activity will be hel
 ## 015
 
 Dear Mr. Shakespeare,<br>
-&emsp;&emsp;&emsp;&emsp;I am writing to express my heartfelt gratitude. I am referring to that unfortunate accident the
+&emsp;&emsp;I am writing to express my heartfelt gratitude. I am referring to that unfortunate accident the
 other day, when I was knocked off my bike by a taxi.<br>
-&emsp;&emsp;&emsp;&emsp;If it had not been for your timely assistance in giving me first aid, I fear that the
+&emsp;&emsp;If it had not been for your timely assistance in giving me first aid, I fear that the
 consequences might have been very serious. Everyone agrees that it is your quick-witted response in that emergency that
 had led to this satisfactory outcome.
-&emsp;&emsp;&emsp;&emsp;Although nowadays people in mounting numbers talk about the need to be unselfish, we see very
+&emsp;&emsp;Although nowadays people in mounting numbers talk about the need to be unselfish, we see very
 few people practise what they preach. If there were more people like you, this world would be a much nicer place.<br>
 
 <p align="right">Yours sincerely,</p>
@@ -285,13 +285,13 @@ few people practise what they preach. If there were more people like you, this w
 ## 016
 
 Dear Sir or Madam,<br>
-&emsp;&emsp;&emsp;&emsp;I am sorry to say that I will not be able to attend the interview at 10:00 a.m. on Monday,
+&emsp;&emsp;I am sorry to say that I will not be able to attend the interview at 10:00 a.m. on Monday,
 December 15, 2025.<br>
-&emsp;&emsp;&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require
+&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require
 surgery on the same day as our interview. If possible, I would like to postpone the interview to another day later in
 the week. I promise that such a situation does not usually happen, and apologize for any inconvenience this may cause
 you.<br>
-&emsp;&emsp;&emsp;&emsp;I am looking forward to hearing from you and, again, am sorry for any trouble this may have
+&emsp;&emsp;I am looking forward to hearing from you and, again, am sorry for any trouble this may have
 caused. Please excuse me for not being able to inform you of my situation sooner.<br>
 
 <p align="right">Yours sincerely,</p>
@@ -300,14 +300,14 @@ caused. Please excuse me for not being able to inform you of my situation sooner
 ## 017
 
 Dear Sir or Madam,<br>
-&emsp;&emsp;&emsp;&emsp;I'm writing the note to apply for the job of teaching your daughter Chinese online.<br>
-&emsp;&emsp;&emsp;&emsp;I am sure that I am the suitable candidate for this position for several reasons. Firstly, I graduated
+&emsp;&emsp;I'm writing the note to apply for the job of teaching your daughter Chinese online.<br>
+&emsp;&emsp;I am sure that I am the suitable candidate for this position for several reasons. Firstly, I graduated
 from Peking University with a bachelor's degree. Enclosed with this note is my resume, which details my previous
 academic qualifications. Secondly, I have been teaching kids from 8 to 12 years old since I entered college. Not only do
 my qualifications and experiences make me a prefect candidate, but my cheerful personality is also well suited to work
 as
 a native tutor. Lastly, I am available every Sunday from 2 p.m. to 6 p.m.<br>
-&emsp;&emsp;&emsp;&emsp;If you could grant me an interview, I would appreciate it.
+&emsp;&emsp;If you could grant me an interview, I would appreciate it.
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -330,16 +330,16 @@ Department of Chinese Language and Literature” at the end of the announcement.
 
 <p align="center">Notice</p>
 <p align="right">December 16, 2025</p>
-&emsp;&emsp;&emsp;&emsp;To enhance international students' ability to speak Chinese and enrich after-class activities for them, the Student Union of Department of Chinese Language and Literature is organizing a school-wide Chinese speech contest for international students, which is to be held on Saturday next week(December 27) at auditorium. Firstly, five prestigious professors from Peking University and Tsinghua University will be invited to be the honorable judges. Secondly, the first six winners will be given awards.<br>
-&emsp;&emsp;&emsp;&emsp;Those who are interested in taking part in it may sign up with the monitor of their classes before Tuesday next week. If the would-be candidates have any questions, please do not hesitate to contact us at the following address: studentunion@163.com. Everybody is welcome to be present at the contest.
+&emsp;&emsp;To enhance international students' ability to speak Chinese and enrich after-class activities for them, the Student Union of Department of Chinese Language and Literature is organizing a school-wide Chinese speech contest for international students, which is to be held on Saturday next week(December 27) at auditorium. Firstly, five prestigious professors from Peking University and Tsinghua University will be invited to be the honorable judges. Secondly, the first six winners will be given awards.<br>
+&emsp;&emsp;Those who are interested in taking part in it may sign up with the monitor of their classes before Tuesday next week. If the would-be candidates have any questions, please do not hesitate to contact us at the following address: studentunion@163.com. Everybody is welcome to be present at the contest.
 <p align="right">The Student Union of Department of Chinese Language and Literature</p>
 
 ### 译文
 
 <p align="center">通 知</p>
 <p align="right">2025年12月16日</p>
-&emsp;&emsp;&emsp;&emsp;为提高留学生们的中文表达能力，丰富他们的课外活动，中文系学生会将于下周六(12月27日)在大礼堂组织全校留学生进行中文演讲比赛。首先，我们将邀请五位来自北京大学和清华大学的知名教授担任尊贵的评委。其次，前六名获奖者将被授予奖项。<br>
-&emsp;&emsp;&emsp;&emsp;有兴趣参加的同学请于下周二之前在本班班长处报名。如果准参赛者有任何问题，请按下述地址和我们联系:studentunion@163.com。欢迎大家积极参加本次大赛。<br>
+&emsp;&emsp;为提高留学生们的中文表达能力，丰富他们的课外活动，中文系学生会将于下周六(12月27日)在大礼堂组织全校留学生进行中文演讲比赛。首先，我们将邀请五位来自北京大学和清华大学的知名教授担任尊贵的评委。其次，前六名获奖者将被授予奖项。<br>
+&emsp;&emsp;有兴趣参加的同学请于下周二之前在本班班长处报名。如果准参赛者有任何问题，请按下述地址和我们联系:studentunion@163.com。欢迎大家积极参加本次大赛。<br>
 <p align="right">中文系学生会</p>
 
 ## 019
@@ -357,9 +357,9 @@ below:
 
 <p align="center">Notice</p>
 <p align="right">December 21, 2025</p>
-&emsp;&emsp;&emsp;&emsp;Welcome to the English Club!This club serves as a platform to demonstrate your outstanding English abilities and to help you develop a range of English skills.<br>
-&emsp;&emsp;&emsp;&emsp;You can be involved in a variety of activities, including staging musical dramas, attending group discussions, watching Oscar-winning movies, and taking part in speeches and debates. These extracurricular activities are highly beneficial in multiple regards. First, your active participation will help in strengthening your sense of responsibility and developing interpersonal relations. Second, various activities organized by us can improve your level of proficiency in English. A good command of English will enable you to get an edge over your peers.<br>
-&emsp;&emsp;&emsp;&emsp;You can submit a written application for membership to our office of email us at englishclub@163.com. The deadline for applications is January 22. Come and join us now!<br>
+&emsp;&emsp;Welcome to the English Club!This club serves as a platform to demonstrate your outstanding English abilities and to help you develop a range of English skills.<br>
+&emsp;&emsp;You can be involved in a variety of activities, including staging musical dramas, attending group discussions, watching Oscar-winning movies, and taking part in speeches and debates. These extracurricular activities are highly beneficial in multiple regards. First, your active participation will help in strengthening your sense of responsibility and developing interpersonal relations. Second, various activities organized by us can improve your level of proficiency in English. A good command of English will enable you to get an edge over your peers.<br>
+&emsp;&emsp;You can submit a written application for membership to our office of email us at englishclub@163.com. The deadline for applications is January 22. Come and join us now!<br>
 
 <p align="right">English Club</p>
 
@@ -367,13 +367,45 @@ below:
 
 <p align="center">告示</p>
 <p align="right">2025年12月21日</p>
-&emsp;&emsp;&emsp;&emsp;欢迎加入英语俱乐部!这个平台可以让你展示自己出色的英语能力，并帮助你提高各项英语技能。<br>
-&emsp;&emsp;&emsp;&emsp;你可以参加各种各样的活动，包括表演音乐剧、参与小组讨论、观看奥斯卡获奖影片、参加演讲和辩论活动。这些课外活动在很多方面都大有裨益。首先，积极参与将有助于增强你的责任感和培养人际关系。其次，我们组织的丰富活动能提高你的英语熟练程度。良好的英语水平将使你比其他同龄人略胜一筹。<br>
-&emsp;&emsp;&emsp;&emsp;想成为会员的话，你可以把书面申请交到我们的办公室或发电子邮件到englishclub@163com。报名截止日期是1月22日。现在就来加入我们吧!<br>
+&emsp;&emsp;欢迎加入英语俱乐部!这个平台可以让你展示自己出色的英语能力，并帮助你提高各项英语技能。<br>
+&emsp;&emsp;你可以参加各种各样的活动，包括表演音乐剧、参与小组讨论、观看奥斯卡获奖影片、参加演讲和辩论活动。这些课外活动在很多方面都大有裨益。首先，积极参与将有助于增强你的责任感和培养人际关系。其次，我们组织的丰富活动能提高你的英语熟练程度。良好的英语水平将使你比其他同龄人略胜一筹。<br>
+&emsp;&emsp;想成为会员的话，你可以把书面申请交到我们的办公室或发电子邮件到englishclub@163com。报名截止日期是1月22日。现在就来加入我们吧!<br>
 <p align="right">英语俱乐部</p>
 
+## 020
 
-<p align="right"></p>
-<p align="right"></p>
+### Directions
+Directions:<br>
+&emsp;&emsp;Suppose your class held a class meeting on contributing to Project Hope last weekend. Youwere assigned to write the minutes of the meeting. In your minutes, you should record the basicinformation, main content of the meeting, and other relevant information.<br>
+&emsp;&emsp;Write your answer in about 100 words on the ANSWER SHEET.<br>
+&emsp;&emsp;Do not use your own name in your minutes, use “Li Ming” instead.<br>
 
+### Example
 
+<p align="center">Minutes of class meeting on "Contributing to Project Hope"</p>
+
+Time: 10 a.m. to 11 a.m. on December 14, 2025<br>
+Place: Root 102, the Student Recreation Center<br>
+Present: All members of the class<br>
+Presided by: Zhang Wei<br>
+Summary of the meeting:<br>
+&emsp;&emsp;I am attaching the minutes of the last class meeting for your review. The summary of the meeting on Contributing to Project Hope is as follows<br>
+&emsp;&emsp;Firstly, moved by the noble cause of Project Hope and encouraged by what has been achieved so far, we agreed to contribute our part to the project by offering financial aid to a senior high school student in a remote area of Sichuan Province. Secondly, we will seek out a girl whose family cannot afford her education. Lastly, our plan is to pay for her tuition on an annual basis until she graduates from high school. We would like to remit our donation directly to a bank account opened by her family in her local area.<br>
+&emsp;&emsp;If you discover any errors or omissions in the minutes, please inform me.
+
+<p align="right">Submitted by: Li Ming</p>
+<p align="right">Date: December 15, 2025</p>
+
+### 译文
+
+<p align="center">“为希望工程做贡献”班会纪要</p>
+时间:2025年12月14日上午10点至11点<br>
+地点:学生活动中心102室<br>
+出席人:全班所有成员<br>
+主持人:张伟<br>
+会议概要:<br>
+&emsp;&emsp;现将上次班会的会议纪要附上以便大家审核。关于为希望工程做贡献的会议纪要如下首先，希望工程这项高尚的事业感动了我们，同时这项工程迄今所取得的成就使我们备受鼓舞。因此，我们一致同意给四川省偏远地区的一名高中生提供经济方面的援助，以此为希望工程贡献我们的微薄之力。其次，我们将找到一个家庭无法负担其教育的女孩。最后，我们计划每年为她支付学费，直至她高中毕业。我们将把捐款直接汇入她的家人在当地开设的银行账户中。<br>
+&emsp;&emsp;如果大家发现会议纪要中有错误或遗漏，请告知我。<br>
+
+<p align="right">提交人:李明</p>
+<p align="right">日期:2025年12月15日</p>
